// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DonutGraph should render 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <svg
      data-testid="DonutGraph__svg"
      height="100"
      width="100"
    >
      <circle
        class="fill-current text-theme-secondary-200 dark:text-black"
        cx="50"
        cy="50"
        fill="inherit"
        r="2"
        stroke-linecap="round"
        stroke-width="0"
      />
      <g
        data-testid="DonutGraph__item"
      >
        <circle
          class="stroke-current text-theme-secondary-300 dark:text-theme-secondary-800"
          cx="50"
          cy="50"
          data-testid="DonutGraph__item-track-line"
          fill="transparent"
          id="circleTrackLine__0"
          pointer-events="none"
          r="18"
          stroke-dasharray="36.548667764616276 76.54866776461628"
          stroke-dashoffset="46.548667764616276"
          stroke-linecap="round"
          stroke-width="2"
        />
        <circle
          class="stroke-current text-theme-success-600"
          cx="50"
          cy="50"
          data-testid="DonutGraph__item-hover-area"
          fill="transparent"
          id="circleHoverArea__0"
          opacity="0"
          pointer-events="visibleStroke"
          r="18"
          stroke-dasharray="36.548667764616276 76.54866776461628"
          stroke-dashoffset="46.548667764616276"
          stroke-linecap="round"
          stroke-width="40"
        />
        <circle
          class="stroke-current text-theme-success-600"
          cx="50"
          cy="50"
          fill="transparent"
          pointer-events="none"
          r="18"
          stroke-dasharray="36.548667764616276 76.54866776461628"
          stroke-dashoffset="46.548667764616276"
          stroke-linecap="round"
          stroke-width="16"
        >
          <animate
            attributeName="r"
            begin="circleHoverArea__0.mouseover"
            dur="0.1s"
            fill="freeze"
            from="18"
            to="34"
          />
          <animate
            attributeName="r"
            begin="circleHoverArea__0.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="34"
            to="18"
          />
          <animate
            attributeName="stroke-dasharray"
            begin="circleHoverArea__0.mouseover"
            dur="0.1s"
            fill="freeze"
            from="36.548667764616276 76.54866776461628"
            to="86.81415022205297 126.81415022205297"
          />
          <animate
            attributeName="stroke-dasharray"
            begin="circleHoverArea__0.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="86.81415022205297 126.81415022205297"
            to="36.548667764616276 76.54866776461628"
          />
          <animate
            attributeName="stroke-dashoffset"
            begin="circleHoverArea__0.mouseover"
            dur="0.1s"
            fill="freeze"
            from="46.548667764616276"
            to="96.81415022205297"
          />
          <animate
            attributeName="stroke-dashoffset"
            begin="circleHoverArea__0.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="96.81415022205297"
            to="46.548667764616276"
          />
        </circle>
      </g>
      <g
        data-testid="DonutGraph__item"
      >
        <circle
          class="stroke-current text-theme-secondary-300 dark:text-theme-secondary-800"
          cx="50"
          cy="50"
          data-testid="DonutGraph__item-track-line"
          fill="transparent"
          id="circleTrackLine__1"
          pointer-events="none"
          r="18"
          stroke-dasharray="13.929200658769766 99.1681348704628"
          stroke-dashoffset="80.47786842338604"
          stroke-linecap="round"
          stroke-width="2"
        />
        <circle
          class="stroke-current text-theme-warning-600"
          cx="50"
          cy="50"
          data-testid="DonutGraph__item-hover-area"
          fill="transparent"
          id="circleHoverArea__1"
          opacity="0"
          pointer-events="visibleStroke"
          r="18"
          stroke-dasharray="13.929200658769766 99.1681348704628"
          stroke-dashoffset="80.47786842338604"
          stroke-linecap="round"
          stroke-width="40"
        />
        <circle
          class="stroke-current text-theme-warning-600"
          cx="50"
          cy="50"
          fill="transparent"
          pointer-events="none"
          r="18"
          stroke-dasharray="13.929200658769766 99.1681348704628"
          stroke-dashoffset="80.47786842338604"
          stroke-linecap="round"
          stroke-width="16"
        >
          <animate
            attributeName="r"
            begin="circleHoverArea__1.mouseover"
            dur="0.1s"
            fill="freeze"
            from="18"
            to="34"
          />
          <animate
            attributeName="r"
            begin="circleHoverArea__1.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="34"
            to="18"
          />
          <animate
            attributeName="stroke-dasharray"
            begin="circleHoverArea__1.mouseover"
            dur="0.1s"
            fill="freeze"
            from="13.929200658769766 99.1681348704628"
            to="44.08849013323179 169.53981031087417"
          />
          <animate
            attributeName="stroke-dasharray"
            begin="circleHoverArea__1.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="44.08849013323179 169.53981031087417"
            to="13.929200658769766 99.1681348704628"
          />
          <animate
            attributeName="stroke-dashoffset"
            begin="circleHoverArea__1.mouseover"
            dur="0.1s"
            fill="freeze"
            from="80.47786842338604"
            to="160.90264035528475"
          />
          <animate
            attributeName="stroke-dashoffset"
            begin="circleHoverArea__1.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="160.90264035528475"
            to="80.47786842338604"
          />
        </circle>
      </g>
      <g
        data-testid="DonutGraph__item"
      >
        <circle
          class="stroke-current text-theme-secondary-300 dark:text-theme-secondary-800"
          cx="50"
          cy="50"
          data-testid="DonutGraph__item-track-line"
          fill="transparent"
          id="circleTrackLine__2"
          pointer-events="none"
          r="18"
          stroke-dasharray="2.6194671058465104 110.47786842338604"
          stroke-dashoffset="103.09733552923255"
          stroke-linecap="round"
          stroke-width="2"
        />
        <circle
          class="stroke-current text-theme-info-600"
          cx="50"
          cy="50"
          data-testid="DonutGraph__item-hover-area"
          fill="transparent"
          id="circleHoverArea__2"
          opacity="0"
          pointer-events="visibleStroke"
          r="18"
          stroke-dasharray="2.6194671058465104 110.47786842338604"
          stroke-dashoffset="103.09733552923255"
          stroke-linecap="round"
          stroke-width="40"
        />
        <circle
          class="stroke-current text-theme-info-600"
          cx="50"
          cy="50"
          fill="transparent"
          pointer-events="none"
          r="18"
          stroke-dasharray="2.6194671058465104 110.47786842338604"
          stroke-dashoffset="103.09733552923255"
          stroke-linecap="round"
          stroke-width="16"
        >
          <animate
            attributeName="r"
            begin="circleHoverArea__2.mouseover"
            dur="0.1s"
            fill="freeze"
            from="18"
            to="34"
          />
          <animate
            attributeName="r"
            begin="circleHoverArea__2.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="34"
            to="18"
          />
          <animate
            attributeName="stroke-dasharray"
            begin="circleHoverArea__2.mouseover"
            dur="0.1s"
            fill="freeze"
            from="2.6194671058465104 110.47786842338604"
            to="22.725660088821186 190.90264035528475"
          />
          <animate
            attributeName="stroke-dasharray"
            begin="circleHoverArea__2.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="22.725660088821186 190.90264035528475"
            to="2.6194671058465104 110.47786842338604"
          />
          <animate
            attributeName="stroke-dashoffset"
            begin="circleHoverArea__2.mouseover"
            dur="0.1s"
            fill="freeze"
            from="103.09733552923255"
            to="203.62830044410595"
          />
          <animate
            attributeName="stroke-dashoffset"
            begin="circleHoverArea__2.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="203.62830044410595"
            to="103.09733552923255"
          />
        </circle>
      </g>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`DonutGraph should render content inside the circle 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <div
      class="absolute"
      style="left: 50px; top: 50px;"
    >
      <div
        data-testid="Content"
      >
        content
      </div>
    </div>
    <svg
      data-testid="DonutGraph__svg"
      height="100"
      width="100"
    >
      <circle
        class="fill-current text-theme-secondary-200 dark:text-black"
        cx="50"
        cy="50"
        fill="inherit"
        r="2"
        stroke-linecap="round"
        stroke-width="0"
      />
      <g
        data-testid="DonutGraph__item"
      >
        <circle
          class="stroke-current text-theme-secondary-300 dark:text-theme-secondary-800"
          cx="50"
          cy="50"
          data-testid="DonutGraph__item-track-line"
          fill="transparent"
          id="circleTrackLine__0"
          pointer-events="none"
          r="18"
          stroke-dasharray="36.548667764616276 76.54866776461628"
          stroke-dashoffset="46.548667764616276"
          stroke-linecap="round"
          stroke-width="2"
        />
        <circle
          class="stroke-current text-theme-success-600"
          cx="50"
          cy="50"
          data-testid="DonutGraph__item-hover-area"
          fill="transparent"
          id="circleHoverArea__0"
          opacity="0"
          pointer-events="visibleStroke"
          r="18"
          stroke-dasharray="36.548667764616276 76.54866776461628"
          stroke-dashoffset="46.548667764616276"
          stroke-linecap="round"
          stroke-width="40"
        />
        <circle
          class="stroke-current text-theme-success-600"
          cx="50"
          cy="50"
          fill="transparent"
          pointer-events="none"
          r="18"
          stroke-dasharray="36.548667764616276 76.54866776461628"
          stroke-dashoffset="46.548667764616276"
          stroke-linecap="round"
          stroke-width="16"
        >
          <animate
            attributeName="r"
            begin="circleHoverArea__0.mouseover"
            dur="0.1s"
            fill="freeze"
            from="18"
            to="34"
          />
          <animate
            attributeName="r"
            begin="circleHoverArea__0.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="34"
            to="18"
          />
          <animate
            attributeName="stroke-dasharray"
            begin="circleHoverArea__0.mouseover"
            dur="0.1s"
            fill="freeze"
            from="36.548667764616276 76.54866776461628"
            to="86.81415022205297 126.81415022205297"
          />
          <animate
            attributeName="stroke-dasharray"
            begin="circleHoverArea__0.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="86.81415022205297 126.81415022205297"
            to="36.548667764616276 76.54866776461628"
          />
          <animate
            attributeName="stroke-dashoffset"
            begin="circleHoverArea__0.mouseover"
            dur="0.1s"
            fill="freeze"
            from="46.548667764616276"
            to="96.81415022205297"
          />
          <animate
            attributeName="stroke-dashoffset"
            begin="circleHoverArea__0.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="96.81415022205297"
            to="46.548667764616276"
          />
        </circle>
      </g>
      <g
        data-testid="DonutGraph__item"
      >
        <circle
          class="stroke-current text-theme-secondary-300 dark:text-theme-secondary-800"
          cx="50"
          cy="50"
          data-testid="DonutGraph__item-track-line"
          fill="transparent"
          id="circleTrackLine__1"
          pointer-events="none"
          r="18"
          stroke-dasharray="13.929200658769766 99.1681348704628"
          stroke-dashoffset="80.47786842338604"
          stroke-linecap="round"
          stroke-width="2"
        />
        <circle
          class="stroke-current text-theme-warning-600"
          cx="50"
          cy="50"
          data-testid="DonutGraph__item-hover-area"
          fill="transparent"
          id="circleHoverArea__1"
          opacity="0"
          pointer-events="visibleStroke"
          r="18"
          stroke-dasharray="13.929200658769766 99.1681348704628"
          stroke-dashoffset="80.47786842338604"
          stroke-linecap="round"
          stroke-width="40"
        />
        <circle
          class="stroke-current text-theme-warning-600"
          cx="50"
          cy="50"
          fill="transparent"
          pointer-events="none"
          r="18"
          stroke-dasharray="13.929200658769766 99.1681348704628"
          stroke-dashoffset="80.47786842338604"
          stroke-linecap="round"
          stroke-width="16"
        >
          <animate
            attributeName="r"
            begin="circleHoverArea__1.mouseover"
            dur="0.1s"
            fill="freeze"
            from="18"
            to="34"
          />
          <animate
            attributeName="r"
            begin="circleHoverArea__1.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="34"
            to="18"
          />
          <animate
            attributeName="stroke-dasharray"
            begin="circleHoverArea__1.mouseover"
            dur="0.1s"
            fill="freeze"
            from="13.929200658769766 99.1681348704628"
            to="44.08849013323179 169.53981031087417"
          />
          <animate
            attributeName="stroke-dasharray"
            begin="circleHoverArea__1.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="44.08849013323179 169.53981031087417"
            to="13.929200658769766 99.1681348704628"
          />
          <animate
            attributeName="stroke-dashoffset"
            begin="circleHoverArea__1.mouseover"
            dur="0.1s"
            fill="freeze"
            from="80.47786842338604"
            to="160.90264035528475"
          />
          <animate
            attributeName="stroke-dashoffset"
            begin="circleHoverArea__1.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="160.90264035528475"
            to="80.47786842338604"
          />
        </circle>
      </g>
      <g
        data-testid="DonutGraph__item"
      >
        <circle
          class="stroke-current text-theme-secondary-300 dark:text-theme-secondary-800"
          cx="50"
          cy="50"
          data-testid="DonutGraph__item-track-line"
          fill="transparent"
          id="circleTrackLine__2"
          pointer-events="none"
          r="18"
          stroke-dasharray="2.6194671058465104 110.47786842338604"
          stroke-dashoffset="103.09733552923255"
          stroke-linecap="round"
          stroke-width="2"
        />
        <circle
          class="stroke-current text-theme-info-600"
          cx="50"
          cy="50"
          data-testid="DonutGraph__item-hover-area"
          fill="transparent"
          id="circleHoverArea__2"
          opacity="0"
          pointer-events="visibleStroke"
          r="18"
          stroke-dasharray="2.6194671058465104 110.47786842338604"
          stroke-dashoffset="103.09733552923255"
          stroke-linecap="round"
          stroke-width="40"
        />
        <circle
          class="stroke-current text-theme-info-600"
          cx="50"
          cy="50"
          fill="transparent"
          pointer-events="none"
          r="18"
          stroke-dasharray="2.6194671058465104 110.47786842338604"
          stroke-dashoffset="103.09733552923255"
          stroke-linecap="round"
          stroke-width="16"
        >
          <animate
            attributeName="r"
            begin="circleHoverArea__2.mouseover"
            dur="0.1s"
            fill="freeze"
            from="18"
            to="34"
          />
          <animate
            attributeName="r"
            begin="circleHoverArea__2.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="34"
            to="18"
          />
          <animate
            attributeName="stroke-dasharray"
            begin="circleHoverArea__2.mouseover"
            dur="0.1s"
            fill="freeze"
            from="2.6194671058465104 110.47786842338604"
            to="22.725660088821186 190.90264035528475"
          />
          <animate
            attributeName="stroke-dasharray"
            begin="circleHoverArea__2.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="22.725660088821186 190.90264035528475"
            to="2.6194671058465104 110.47786842338604"
          />
          <animate
            attributeName="stroke-dashoffset"
            begin="circleHoverArea__2.mouseover"
            dur="0.1s"
            fill="freeze"
            from="103.09733552923255"
            to="203.62830044410595"
          />
          <animate
            attributeName="stroke-dashoffset"
            begin="circleHoverArea__2.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="203.62830044410595"
            to="103.09733552923255"
          />
        </circle>
      </g>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`DonutGraph should render tooltip on hover 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <div
      class="absolute duration-200 transition-opacity opacity-0 hidden"
    >
      <div
        data-testid="TooltipContent"
      >
        item 2 value: 30
      </div>
    </div>
    <svg
      data-testid="DonutGraph__svg"
      height="100"
      width="100"
    >
      <circle
        class="fill-current text-theme-secondary-200 dark:text-black"
        cx="50"
        cy="50"
        fill="inherit"
        r="2"
        stroke-linecap="round"
        stroke-width="0"
      />
      <g
        data-testid="DonutGraph__item"
      >
        <circle
          class="stroke-current text-theme-secondary-300 dark:text-theme-secondary-800"
          cx="50"
          cy="50"
          data-testid="DonutGraph__item-track-line"
          fill="transparent"
          id="circleTrackLine__0"
          pointer-events="none"
          r="18"
          stroke-dasharray="36.548667764616276 76.54866776461628"
          stroke-dashoffset="46.548667764616276"
          stroke-linecap="round"
          stroke-width="2"
        />
        <circle
          class="stroke-current text-theme-success-600"
          cx="50"
          cy="50"
          data-testid="DonutGraph__item-hover-area"
          fill="transparent"
          id="circleHoverArea__0"
          opacity="0"
          pointer-events="visibleStroke"
          r="18"
          stroke-dasharray="36.548667764616276 76.54866776461628"
          stroke-dashoffset="46.548667764616276"
          stroke-linecap="round"
          stroke-width="40"
        />
        <circle
          class="stroke-current text-theme-success-600"
          cx="50"
          cy="50"
          fill="transparent"
          pointer-events="none"
          r="18"
          stroke-dasharray="36.548667764616276 76.54866776461628"
          stroke-dashoffset="46.548667764616276"
          stroke-linecap="round"
          stroke-width="16"
        >
          <animate
            attributeName="r"
            begin="circleHoverArea__0.mouseover"
            dur="0.1s"
            fill="freeze"
            from="18"
            to="34"
          />
          <animate
            attributeName="r"
            begin="circleHoverArea__0.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="34"
            to="18"
          />
          <animate
            attributeName="stroke-dasharray"
            begin="circleHoverArea__0.mouseover"
            dur="0.1s"
            fill="freeze"
            from="36.548667764616276 76.54866776461628"
            to="86.81415022205297 126.81415022205297"
          />
          <animate
            attributeName="stroke-dasharray"
            begin="circleHoverArea__0.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="86.81415022205297 126.81415022205297"
            to="36.548667764616276 76.54866776461628"
          />
          <animate
            attributeName="stroke-dashoffset"
            begin="circleHoverArea__0.mouseover"
            dur="0.1s"
            fill="freeze"
            from="46.548667764616276"
            to="96.81415022205297"
          />
          <animate
            attributeName="stroke-dashoffset"
            begin="circleHoverArea__0.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="96.81415022205297"
            to="46.548667764616276"
          />
        </circle>
      </g>
      <g
        data-testid="DonutGraph__item"
      >
        <circle
          class="stroke-current text-theme-secondary-300 dark:text-theme-secondary-800"
          cx="50"
          cy="50"
          data-testid="DonutGraph__item-track-line"
          fill="transparent"
          id="circleTrackLine__1"
          pointer-events="none"
          r="18"
          stroke-dasharray="13.929200658769766 99.1681348704628"
          stroke-dashoffset="80.47786842338604"
          stroke-linecap="round"
          stroke-width="2"
        />
        <circle
          class="stroke-current text-theme-warning-600"
          cx="50"
          cy="50"
          data-testid="DonutGraph__item-hover-area"
          fill="transparent"
          id="circleHoverArea__1"
          opacity="0"
          pointer-events="visibleStroke"
          r="18"
          stroke-dasharray="13.929200658769766 99.1681348704628"
          stroke-dashoffset="80.47786842338604"
          stroke-linecap="round"
          stroke-width="40"
        />
        <circle
          class="stroke-current text-theme-warning-600"
          cx="50"
          cy="50"
          fill="transparent"
          pointer-events="none"
          r="18"
          stroke-dasharray="13.929200658769766 99.1681348704628"
          stroke-dashoffset="80.47786842338604"
          stroke-linecap="round"
          stroke-width="16"
        >
          <animate
            attributeName="r"
            begin="circleHoverArea__1.mouseover"
            dur="0.1s"
            fill="freeze"
            from="18"
            to="34"
          />
          <animate
            attributeName="r"
            begin="circleHoverArea__1.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="34"
            to="18"
          />
          <animate
            attributeName="stroke-dasharray"
            begin="circleHoverArea__1.mouseover"
            dur="0.1s"
            fill="freeze"
            from="13.929200658769766 99.1681348704628"
            to="44.08849013323179 169.53981031087417"
          />
          <animate
            attributeName="stroke-dasharray"
            begin="circleHoverArea__1.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="44.08849013323179 169.53981031087417"
            to="13.929200658769766 99.1681348704628"
          />
          <animate
            attributeName="stroke-dashoffset"
            begin="circleHoverArea__1.mouseover"
            dur="0.1s"
            fill="freeze"
            from="80.47786842338604"
            to="160.90264035528475"
          />
          <animate
            attributeName="stroke-dashoffset"
            begin="circleHoverArea__1.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="160.90264035528475"
            to="80.47786842338604"
          />
        </circle>
      </g>
      <g
        data-testid="DonutGraph__item"
      >
        <circle
          class="stroke-current text-theme-secondary-300 dark:text-theme-secondary-800"
          cx="50"
          cy="50"
          data-testid="DonutGraph__item-track-line"
          fill="transparent"
          id="circleTrackLine__2"
          pointer-events="none"
          r="18"
          stroke-dasharray="2.6194671058465104 110.47786842338604"
          stroke-dashoffset="103.09733552923255"
          stroke-linecap="round"
          stroke-width="2"
        />
        <circle
          class="stroke-current text-theme-info-600"
          cx="50"
          cy="50"
          data-testid="DonutGraph__item-hover-area"
          fill="transparent"
          id="circleHoverArea__2"
          opacity="0"
          pointer-events="visibleStroke"
          r="18"
          stroke-dasharray="2.6194671058465104 110.47786842338604"
          stroke-dashoffset="103.09733552923255"
          stroke-linecap="round"
          stroke-width="40"
        />
        <circle
          class="stroke-current text-theme-info-600"
          cx="50"
          cy="50"
          fill="transparent"
          pointer-events="none"
          r="18"
          stroke-dasharray="2.6194671058465104 110.47786842338604"
          stroke-dashoffset="103.09733552923255"
          stroke-linecap="round"
          stroke-width="16"
        >
          <animate
            attributeName="r"
            begin="circleHoverArea__2.mouseover"
            dur="0.1s"
            fill="freeze"
            from="18"
            to="34"
          />
          <animate
            attributeName="r"
            begin="circleHoverArea__2.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="34"
            to="18"
          />
          <animate
            attributeName="stroke-dasharray"
            begin="circleHoverArea__2.mouseover"
            dur="0.1s"
            fill="freeze"
            from="2.6194671058465104 110.47786842338604"
            to="22.725660088821186 190.90264035528475"
          />
          <animate
            attributeName="stroke-dasharray"
            begin="circleHoverArea__2.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="22.725660088821186 190.90264035528475"
            to="2.6194671058465104 110.47786842338604"
          />
          <animate
            attributeName="stroke-dashoffset"
            begin="circleHoverArea__2.mouseover"
            dur="0.1s"
            fill="freeze"
            from="103.09733552923255"
            to="203.62830044410595"
          />
          <animate
            attributeName="stroke-dashoffset"
            begin="circleHoverArea__2.mouseleave"
            dur="0.15s"
            fill="freeze"
            from="203.62830044410595"
            to="103.09733552923255"
          />
        </circle>
      </g>
    </svg>
  </div>
</DocumentFragment>
`;
